--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,10 @@
         <gson.version>2.7</gson.version>
         <json.version>20160212</json.version>
 
-        <commons-lang3.version>3.4</commons-lang3.version>
+        <commons-lang.version>3.4</commons-lang.version>
         <commons-io.version>2.5</commons-io.version>
         <commons-codec.version>1.10</commons-codec.version>
+        <commons-collections.version>4.1</commons-collections.version>
 
         <junit.version>4.12</junit.version>
         <mockito.version>1.10.19</mockito.version>
@@ -120,7 +121,12 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
+                <version>${commons-lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections.version}</version>
             </dependency>
 
             <dependency>
